syntax = "proto3";

option java_multiple_files = true;
option java_package = "Tinkar.ProtoBuf";
option java_outer_classname = "PBTinkar";

option csharp_namespace = "Tinkar.ProtoBuf.CS";

import "Proto/Component/Graph/PBVertex.proto";

package Tinkar.ProtoBuf;

message PBDiGraph{
  message Successors {
    int32 VertexIndex = 1;
    repeated int32 SuccessorIndices = 2;
  }

  message Predecesors {
    int32 VertexIndex = 1;
    repeated int32 PredecessorIndices = 2;
  }

  repeated PBVertex VertexMap = 1;
  repeated int32 RootSequence = 2;
  repeated Successors SuccessorMap = 3;
  repeated Predecesors PredecesorMap = 4;
}
